updates to first project - whisper form added

--- a/src/main/resources/templates/helloworld/message-form.html
+++ b/src/main/resources/templates/helloworld/message-form.html
@@ -1,5 +1,5 @@
-<h2>Send a Message</h2>
-<form method="get" action="./message">
-  <input type="text" name="message" placeholder="say nothing...">
-  <button>Send the message</button>
+<h2>Send a YELLY Message</h2>
+<form method="get" action="./message-path"> <!--this is how you tell java where to go, sends the info to message-path -->
+  <input type="text" name="submittedMessage" placeholder="say nothing...">
+  <button>Send the LOUD message</button>
 </form> 
