--- a/src/main/resources/templates/helloworld/index.html
+++ b/src/main/resources/templates/helloworld/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Welcome to your First Project!</h1>
     {{> helloworld/message-form }}
-  </body>
+    {{> helloworld/whisper-form}}
+      </body>
 </html>
