changes to template and refactored

--- a/src/main/resources/templates/helloworld/message.html
+++ b/src/main/resources/templates/helloworld/message.html
@@ -12,6 +12,6 @@
     </p>
     {{> helloworld/message-form }} <!-- go to message-form and grab all content, replaces this line with that HTML and sends to browser -->
      {{> helloworld/whisper-form }}
-    {{> helloworld/adder-form }}
+    {{> math/adder-form }}
   </body>
 </html>
