--- a/src/main/resources/templates/helloworld/whisper.html
+++ b/src/main/resources/templates/helloworld/whisper.html
@@ -12,6 +12,6 @@
     </p>
     {{> helloworld/message-form }}
     {{> helloworld/whisper-form }} <!-- go to whisper-form and grab all content, replaces this line with that HTML and sends to browser -->
-    {{> helloworld/adder-form }}
+    {{> math/adder-form }}
   </body>
 </html>
