--- a/src/main/resources/templates/math/sum-result.html
+++ b/src/main/resources/templates/math/sum-result.html
@@ -6,7 +6,7 @@
   <body>
     <a href="/">Back home</a>
     <h1>Your Result: {{ sum }}</h1>
-    {{> helloworld/adder-form }}
+    {{> math/adder-form }}
     {{> helloworld/message-form }}
     {{> helloworld/whisper-form}}
   </body>
