--- a/src/main/resources/templates/math/calculator.html
+++ b/src/main/resources/templates/math/calculator.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html>
   <head>
+  
+  <style>
+  h2 {
+  color:#4A235A;
+
+  }
+  
+  </style>
     <title>Mathing</title>
     <link rel="stylesheet" href="/site.css">
   </head>
-  <body>
-    <p>
-      {{> math/calculator-form }}
-      {{ output }}
-    </p>
+  <body background="https://conductiv.files.wordpress.com/2015/02/dsc_1884blog.jpg?w=672&h=372&crop=1">
+ 
+ 
+  <a href="/">Back home</a>
+    <p> {{> math/calculator-form }} </p>
+    <h2>Your result: {{ output }} </h2>
   </body>
 </html>
